--- a/components/StoryStickyBar/StoryStickyBar.module.scss
+++ b/components/StoryStickyBar/StoryStickyBar.module.scss
@@ -16,7 +16,6 @@ $story-sticky-bar-height: 70px;
     padding: $spacing-2 $spacing-5;
     background: $color-base-white;
     border-top: 1px solid $color-base-300;
-    z-index: 999;
 
     @include desktop-up {
         display: block
